// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for PokemonGrid component debe de mostrar items cuando se cargan imágenes useFetchPokemon 1`] = `
<Fragment>
  <div
    className="card-grid"
  >
    <PokemonGridItem
      id="1"
      key="1"
      name="Bulbasaur"
      url="https://google.com"
    />
  </div>
</Fragment>
`;

exports[`Tests for PokemonGrid component debe de mostrarse correctamente 1`] = `
<Fragment>
  <p
    className="animate__animated animate__flash"
  >
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
